# ai-generated-image-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  scores.json  template.py
.github/workflows/: main_imageauth.yml
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_base_model_development.ipynb  03_model_training_with_callbacks.ipynb  05_prediction.ipynb  prepare_callbacks.ipynb
src/image_authenticity_detector/: __init__.py
src/image_authenticity_detector/components/: data_ingestion.py  model_evaluation_mlflow.py  model_trainer.py  prepare_base_model.py  prepare_callbacks.py
src/image_authenticity_detector/config/: configuration.py
src/image_authenticity_detector/entity/: config_entity.py
src/image_authenticity_detector/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
src/image_authenticity_detector/utils/: common.py
templates/: index.html
