[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-generated-image-detector"
version = "1.0.0"
description = "A Flask-based web application to classify images as real or AI-generated using a CNN with transfer learning and CI/CD on Azure."
authors = [
    {name = "Olumide Olumayegun", email = "midemayegun@yahoo.co.uk"}
]
license = {text = "MIT"}
keywords = ["deep-learning", "image-classification", "AI-generated", "real-images", "Flask", "Azure"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
readme = "README.md"
#dependencies = [
#   "tensorflow",
#   "keras",
#    "dvc",
#    "mlflow",
#    "dagshub",
#    "boto3",
#    "pillow",
#    "pandas",
#    "gdown",
#    "notebook",
#   "numpy",
#   "matplotlib",
#    "seaborn",
#    "python-box",
#    "pyYAML",
#    "tqdm",
#   "ensure",
#   "joblib",
#   "types-PyYAML",
#    "scipy",
#    "Flask",
#    "Flask-Cors"
#]
#python-requires = ">=3.8"

[project.urls]
Documentation = "https://github.com/OlumideOlumayegun/ai-generated-image-detector/docs"
Source = "https://github.com/OlumideOlumayegun/ai-generated-image-detector"
Tracker = "https://github.com/OlumideOlumayegun/ai-generated-image-detector/issues"

[tool.setuptools.packages.find]
where = ["src"]

#[tool.setuptools]
#packages = ["image_authenticity_detector"]
#include_package_data = true

#[tool.setuptools.package_data]
#"image_authenticity_detector" = ["static/*", "templates/*"]
